# stock-audible

./: .coveragerc  .env.example  .gitattributes  .gitignore  README.md  app.py  config.py  pyproject.toml  pytest.ini  stock_service.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_app.py  test_config.py  test_integration.py  test_socketio_handlers.py  test_stock_service.py
