[project]
name = "stock-audible"
version = "0.1.0"
description = "Stock Ticker Audio Announcer"
authors = [
    {name = "Rich Dabrowski",email = "engineering@richd.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-socketio (>=5.6.0,<6.0.0)",
    "yfinance (>=1.0,<2.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

