[project]
name = "stock-audible"
version = "1.1.0"
description = "Stock Ticker Audio Announcer"
authors = [
    {name = "Rich Dabrowski",email = "engineering@richd.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-socketio (>=5.6.0,<6.0.0)",
    "yfinance (>=1.0,<2.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-flask = "^1.3.0"
pytest-mock = "^3.12.0"
freezegun = "^1.4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

